# dymo-cups-drivers

./: .gitignore  AUTHORS  CHANGELOG  ChangeLog  INSTALL  INSTALL.md  Makefile.am  Makefile.in  README  README.md  TROUBLESHOOTING.md  build.sh  configure  configure.ac  dymo-cups-drivers.spec
.github/workflows/: build.yml
debian/: changelog  control  copyright  printer-driver-dymo.install  printer-driver-dymo.ppd-updater  rules  watch
debian/patches/: dont_fail_on_uninstalled_filter_ppdtest.patch  inheritate_CXXFLAGS.patch  port_tests_to_newer_cups_headers.patch  series
debian/tests/: control  printer-driver-dymo
docs/: DYMO_SDK_for_Linux.rtf  Makefile.am  Makefile.in  SAMPLES  longtest.txt  test.ps  test.txt
ppd/: Makefile.am  Makefile.in  lm400.ppd  lm450.ppd  lmmls.ppd  lmpc.ppd  lmpc2.ppd  lmpnp.ppd  lmwpnp.ppd  lp350.ppd  lw300.ppd  lw310.ppd  lw315.ppd  lw320.ppd  lw330.ppd  lw330t.ppd  lw400.ppd  lw400t.ppd  lw450.ppd  lw450dl.ppd  lw450dt.ppd  lw450t.ppd  lw450tt.ppd  lw4xl.ppd  lw550.ppd  lw550p.ppd  lw550t.ppd  lw550tp.ppd  lw5xl.ppd  lw5xlp.ppd  lwduol.ppd  lwduot.ppd  lwduot2.ppd  lwtt.ppd  lww.ppd  se450.ppd
samples/: Makefile.am  Makefile.in
samples/custom_paper/: CustomPaper.cpp  Makefile.am  Makefile.in
samples/custom_paper_tape/: CairoUtils.h  CustomPaperTape.cpp  Makefile.am  Makefile.in
samples/paper_bounds/: Makefile.am  Makefile.in  PaperBounds.cpp
samples/paper_list/: Makefile.am  Makefile.in  PaperList.cpp
samples/test_label/: Makefile.am  Makefile.in  TestLabel.cpp
src/: Makefile.am  Makefile.in  config.h.in
src/common/: CommonTypedefs.h  CupsFilter.h  CupsPrintEnvironment.cpp  CupsPrintEnvironment.h  DummyLanguageMonitor.cpp  DummyLanguageMonitor.h  ErrorDiffusionHalftoning.cpp  ErrorDiffusionHalftoning.h  Halftoning.cpp  Halftoning.h  NonLinearLaplacianHalftoning.cpp  NonLinearLaplacianHalftoning.h  PrinterDriver.h
src/common/tests/: MOCK_PrintEnvironment.cpp  MOCK_PrintEnvironment.h  Makefile.am  Makefile.in  TestCommon.cpp  TestCommon.h  TestErrorDiffusionHalftoning.cpp  TestErrorDiffusionHalftoning.h  TestNLLHalftoning.cpp  TestNLLHalftoning.h  testsMain.cpp
src/lm/: CupsFilterLabelManager.cpp  CupsFilterLabelManager.h  LabelManagerDriver.cpp  LabelManagerDriver.h  LabelManagerLanguageMonitor.cpp  LabelManagerLanguageMonitor.h  Makefile.am  Makefile.in  raster2dymolm.cpp
src/lm/tests/: Makefile.am  Makefile.in  TestLabelManagerDriver.cpp  TestLabelManagerDriver.h  TestLabelManagerFilter.cpp  TestLabelManagerFilter.h
src/lw/: CupsFilterLabelWriter.cpp  CupsFilterLabelWriter.h  LabelWriterDriver.cpp  LabelWriterDriver.h  LabelWriterLanguageMonitor.cpp  LabelWriterLanguageMonitor.h  Makefile.am  Makefile.in  raster2dymolw.cpp
src/lw/tests/: MOCK_LWLMPrintEnvironment.cpp  MOCK_LWLMPrintEnvironment.h  Makefile.am  Makefile.in  TestLabelWriterDriver.cpp  TestLabelWriterDriver.h  TestLabelWriterFilter.cpp  TestLabelWriterFilter.h  TestLabelWriterLanguageMonitor.cpp  TestLabelWriterLanguageMonitor.h
src_v2/: Makefile.am
src_v2/common/: CommonTypedefs.h  CupsFilter.h  CupsPrintEnvironment.cpp  CupsPrintEnvironment.h  CupsUtils.cpp  CupsUtils.h  DummyLanguageMonitor.h  ErrorDiffusionHalftoning.h  Halftoning.h  NonLinearLaplacianHalftoning.cpp  NonLinearLaplacianHalftoning.h  PrinterDriver.h
src_v2/common/tests/: MOCK_PrintEnvironment.h  Makefile.am  TestNLLHalftoning.cpp  TestNLLHalftoning.h
src_v2/lm/: LabelManagerDriver.h  LabelManagerDriverInitializer.cpp  LabelManagerDriverInitializer.h  LabelManagerDriverV2.cpp  LabelManagerDriverV2.h  LabelManagerLanguageMonitor.h  LabelManagerLanguageMonitorV2.cpp  LabelManagerLanguageMonitorV2.h  Makefile.am  raster2dymolm.cpp
src_v2/lm/tests/: Makefile.am  TestLabelManagerDriver.cpp  TestLabelManagerFilter.cpp  TestLabelManagerFilter.h
src_v2/lw/: LabelWriterDriver.h  LabelWriterDriverInitializer.cpp  LabelWriterDriverInitializer.h  LabelWriterDriverV2.cpp  LabelWriterDriverV2.h  LabelWriterLanguageMonitor.h  LabelWriterLanguageMonitorV2.cpp  LabelWriterLanguageMonitorV2.h  Makefile.am  raster2dymolw.cpp
src_v2/lw/tests/: MOCK_LWLMPrintEnvironment.cpp  Makefile.am  TestLabelWriterDriver.h  TestLabelWriterFilter.cpp  TestLabelWriterFilter.h
